Fixed wrong position of some texts in greeting page for mobile devices

--- a/src/app/components/greeting/greeting.component.scss
+++ b/src/app/components/greeting/greeting.component.scss
@@ -1,8 +1,3 @@
-.indications-container {
-  position: absolute;
-  bottom: 0;
-}
-
 .viewport-container {
   z-index: 1;
   position: relative;
